<?xml version = "1.0" encoding = "utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Login">


    <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:contentDescription="@string/fabflix_logo_description"/>

    <TextView
            android:text=""
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/message"
            android:layout_below="@+id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

    <EditText
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:hint="@string/email_hint"
            android:focusable="true"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/message"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:inputType="textWebEmailAddress"
            android:importantForAutofill="no"/>


    <EditText
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_below="@+id/username"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/username"
            android:layout_alignEnd="@+id/username"
            android:hint="@string/password_hint"
            android:layout_marginStart="10dp"
            android:importantForAutofill="no"/>
    <Button

            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/log_in_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/login"
            android:layout_below="@+id/password"
            android:textColor="#FFFFFF"
            android:background="@drawable/btn_rounded"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

</RelativeLayout>