<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/movieTitleInput"
                    android:hint="@string/movie_title_hint"
                    android:autofillHints=""/>

            <Switch
                    android:text="@string/fuzzy_switch_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/fuzzySwitch"
                    android:layout_weight="1"/>

            <Button
                    android:radius="8dp"
                    android:textColor="#FFFFFF"
                    android:background="@drawable/btn_rounded"
                    android:text="@string/search_button_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/searchButton"
                    android:layout_weight="1"/>
        </LinearLayout>

        <ListView
                android:layout_marginTop="5dp"
                android:id="@+id/list"
                android:divider="@android:color/transparent"
                android:dividerHeight="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <Button
                    android:radius="8dp"
                    android:textColor="#FFFFFF"
                    android:background="#007BFF"
                    android:text="Pervious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/perviousButton"
                    android:layout_weight="1"/>
            <TextView
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Page"
                    android:id="@+id/page"
                    android:layout_centerHorizontal="true"
                    android:textColor="#000000"
                    android:textSize="30dp"/>

            <Button
                    android:radius="8dp"
                    android:textColor="#FFFFFF"
                    android:background="#007BFF"
                    android:text="Next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/nextButton"
                    android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>